--- a/include/libfvde.h.in
+++ b/include/libfvde.h.in
@@ -566,6 +566,12 @@ int libfvde_encryption_context_plist_decrypt(
      size_t key_bit_size,
      libfvde_error_t **error );
 
+LIBFVDE_EXTERN \
+int libfvde_volume_read_encryption_context_plist(
+     libfvde_volume_t *volume,
+     const char *filename,
+     libfvde_error_t **error );
+
 #if defined( __cplusplus )
 }
 #endif
